Adding sign in page & updating sign up page

--- a/frontend/public/body.css
+++ b/frontend/public/body.css
@@ -2,4 +2,6 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(241, 241, 241);
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
